fix patrocinadores issue on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ header .main-btn {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 
-    @media screen and (min-width: 800px) {
+    @media screen and (min-width: 870px) {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 
